--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "repository": "git@github.com:stuartkeith/reasonml-sequencer.git",
   "version": "0.1.0",
   "scripts": {
-    "build": "bsb -make-world",
     "start": "bsb -make-world -w",
     "clean": "bsb -clean-world",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack-serve --config ./webpack.config.js --content static/",
-    "webpack:production": "NODE_ENV=production webpack && cp static/* build/"
+    "serve": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "keywords": [
     "BuckleScript"
@@ -22,8 +20,6 @@
   },
   "devDependencies": {
     "bs-platform": "^3.1.5",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.10",
-    "webpack-serve": "^1.0.4"
+    "parcel-bundler": "^1.9.4"
   }
 }
