--- a/bsconfig.json
+++ b/bsconfig.json
@@ -3,9 +3,9 @@
   comma. If this screws with your editor highlighting, please tell us by filing
   an issue! */
 {
-  "name": "react-template",
+  "name": "reasonml-sequencer",
   "reason": {
-    "react-jsx": 2
+    "react-jsx": 3
   },
   "sources": {
     "dir" : "src",
