--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,16 +1,18 @@
-/* This is the BuckleScript configuration file. Note that this is a comment;
-  BuckleScript comes with a JSON parser that supports comments and trailing
-  comma. If this screws with your editor highlighting, please tell us by filing
-  an issue! */
 {
   "name": "reasonml-sequencer",
   "reason": {
     "react-jsx": 3
   },
-  "sources": {
-    "dir" : "src",
-    "subdirs" : true
-  },
+  "sources": [
+    {
+      "dir" : "src",
+      "subdirs" : true
+    },
+    {
+      "dir": "__tests__",
+      "type": "dev"
+    }
+  ],
   "package-specs": [{
     "module": "commonjs",
     "in-source": true
@@ -21,5 +23,6 @@
     "bs-webapi",
     "reason-react"
   ],
+  "bs-dev-dependencies": ["@glennsl/bs-jest"],
   "refmt": 3
 }
