--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "watch": "bsb -make-world -w",
     "clean": "bsb -clean-world",
     "serve": "parcel src/index.html",
-    "build": "bsb -make-world && parcel build src/index.html"
+    "build": "bsb -make-world && parcel build src/index.html",
+    "test": "jest --watch"
   },
   "keywords": [
     "BuckleScript"
@@ -19,6 +20,7 @@
     "reason-react": "^0.7.0"
   },
   "devDependencies": {
+    "@glennsl/bs-jest": "^0.4.8",
     "bs-platform": "^5.0.6",
     "bs-webapi": "^0.15.2",
     "parcel-bundler": "^1.12.3"
