--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "repository": "git@github.com:stuartkeith/reasonml-sequencer.git",
   "version": "0.1.0",
   "scripts": {
-    "watch": "bsb -make-world -w",
+    "start": "bsb -make-world -w",
     "clean": "bsb -clean-world",
     "serve": "parcel src/index.html",
     "build": "bsb -make-world && parcel build src/index.html",
