Switch bucklescript with rescript

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -23,6 +23,5 @@
     "bs-webapi",
     "reason-react"
   ],
-  "bs-dev-dependencies": ["@glennsl/bs-jest"],
-  "refmt": 3
+  "bs-dev-dependencies": ["@glennsl/bs-jest"]
 }
