--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "repository": "git@github.com:stuartkeith/reasonml-sequencer.git",
   "version": "0.1.0",
   "scripts": {
-    "start": "bsb -make-world -w",
-    "clean": "bsb -clean-world",
+    "start": "rescript build -w",
+    "clean": "rescript clean",
     "serve": "parcel src/index.html",
-    "build": "bsb -make-world && parcel build src/index.html",
+    "build": "rescript build && parcel build src/index.html",
     "test": "jest --watch"
   },
   "keywords": [
@@ -20,9 +20,9 @@
   },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.6.0",
-    "bs-platform": "^8.4.2",
     "bs-webapi": "^0.19.1",
     "parcel-bundler": "^1.12.4",
-    "reason-react": "^0.9.1"
+    "reason-react": "^0.9.1",
+    "rescript": "^9.1.4"
   }
 }
